--- a/src/pages/shop/vip-level-list/vip-level-list.component.html
+++ b/src/pages/shop/vip-level-list/vip-level-list.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-23 15:22:50
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-07 16:58:56
+ * @LastEditTime: 2022-01-10 14:16:01
 -->
-<div class="scrollBar" [style.height]="listHeight + 'px'" #scrollBar>
+<div [ngStyle]="styles.scrollBar" [style.height]="listHeight + 'px'">
   <app-image [imgData]="lightImg"></app-image>
   <app-image-button [imgData]="vip1" (itemClick)="onListItemClick(0)"></app-image-button>
   <app-image-button [imgData]="vip2" (itemClick)="onListItemClick(1)"></app-image-button>
