--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-19 15:35:54
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-06 16:36:57
+ * @LastEditTime: 2022-01-10 14:36:59
 -->
-<div class="mainDiv middleCenter widthApp" [attr.style]="matrix">
+<div class="mainDiv" [style]="matrix" [ngStyle]="mainDiv">
     <div *ngIf="hasEnterLobby"><iframe src="assets/firebase/firebase.html" id="firebaseReporter" height="50"></iframe></div>
     <app-dynamic-layer [mainHeight]="hSet"></app-dynamic-layer>
     <app-loading-and-po [mainHeight]="hSet"></app-loading-and-po>
