--- a/src/siene/loading-and-po/loading-layer/loading-and-po.component.html
+++ b/src/siene/loading-and-po/loading-layer/loading-and-po.component.html
@@ -4,12 +4,12 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-20 10:43:20
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-06 13:42:56
+ * @LastEditTime: 2022-01-10 14:42:01
 -->
 <div class="widthApp" [style.height]="mainHeight+'px'" [ngStyle]="loadingBg" [hidden]="!showingLoading">
   <div [ngStyle]="loadingShadow"></div>
   <app-popup-layer></app-popup-layer>
   <div class="widthApp" [hidden]="!showLoadingGif" [style.height]="mainHeight+'px'">
-    <img src="assets/loading_ui/loading.gif" alt="" class="middleCenter" [ngStyle]="loadingPicture">
+    <img src="assets/loading_ui/loading.gif" alt="" [ngStyle]="loadingPicture">
   </div>
 </div>
