--- a/src/pages/my/sound-and-logout/sound-and-logout.component.html
+++ b/src/pages/my/sound-and-logout/sound-and-logout.component.html
@@ -4,12 +4,12 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-16 13:14:54
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-07 16:50:09
+ * @LastEditTime: 2022-01-10 15:42:25
 -->
 <div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="styles.stretchingBg">
   <app-image [imgData]="title"></app-image>
   <app-image-button [imgData]="backBtn" (itemClick)="gotoBack()"></app-image-button>
-  <app-image-button [imgData]="logoutBtn" (itemClick)="logout()"></app-image-button>
+  <div [ngStyle]="styles.bottom"><app-image-button [imgData]="logoutBtn" (itemClick)="logout()"></app-image-button></div>
   <app-image [imgData]="soundEffectSettingBg"></app-image>
   <app-image [imgData]="musicSettingBg"></app-image>
   <app-image-button [imgData]="soundEffectOnBtn" (itemClick)="setSoundEffect( true )" *ngIf="soundEffectOn"></app-image-button>
