--- a/src/service/ui/bottom-bar/bottom-bar.component.html
+++ b/src/service/ui/bottom-bar/bottom-bar.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-08-06 11:27:57
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-09 17:30:43
+ * @LastEditTime: 2022-01-10 15:54:18
 -->
-<div class="bottom_bar">
+<div [ngStyle]="styles.bottomBar">
   <app-image [imgData]="bottomBg"></app-image>
   <app-image-button [imgData]="home" (itemClick)="gotoLobby()" *ngIf="iconBigIndex!=0"></app-image-button>
   <app-image-button [imgData]="shop" (itemClick)="gotoBank()" *ngIf="iconBigIndex!=1"></app-image-button>
