--- a/src/service/ui/image-rotating/image-rotating.component.html
+++ b/src/service/ui/image-rotating/image-rotating.component.html
@@ -4,6 +4,6 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-23 09:42:10
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-21 12:10:36
+ * @LastEditTime: 2022-01-13 10:08:38
 -->
-<div [attr.style]="imgStyle" #carousel></div>
+<div [style]="imgStyle" #carousel></div>
