--- a/src/basicUI/active-index-point/active-index-point.component.css
+++ b/src/basicUI/active-index-point/active-index-point.component.css
@@ -2,13 +2,7 @@
     position: absolute;
     text-align: center;
 }
-.disActive {
+.dot{
     display: inline-block;
     position: relative;
-    background: rgba(0, 0, 0, 0.3);
-}
-.active {
-    display: inline-block;
-    position: relative;
-    background: #fff;
 }
