--- a/src/basicUI/active-index-point/active-index-point.component.html
+++ b/src/basicUI/active-index-point/active-index-point.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-28 11:08:45
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-30 11:54:31
+ * @LastEditTime: 2022-01-14 13:20:06
 -->
 <div class="pointContainer" [ngStyle]="containnerRect">
-  <span *ngFor="let item of items; let i = index" [ngClass]="i == activeIndex?'active':'disActive'" [ngStyle]="spanStyle"></span>
+  <span class="dot" *ngFor="let item of items; let i = index" [style.background-color]="styleI(i)" [ngStyle]="spanStyle"></span>
 </div>
