--- a/src/pages/lobby/banner/banner.component.html
+++ b/src/pages/lobby/banner/banner.component.html
@@ -4,12 +4,12 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-02 14:04:12
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-13 16:58:24
+ * @LastEditTime: 2022-01-14 15:01:50
 -->
 <div #bannerEntity>
   <img [src]="item.art" class="bannerPic widthApp" *ngFor="let item of featureDataForShow; let i = index" [style.left]="( i - (showTouchBar?1:0) ) * 750+'px'" >
 </div>
 <img class="bannerPic widthApp" [src]="featureData[carouselCount]?.art" *ngIf="isMoving"/>
 <img class="bannerPic widthApp" [src]="featureData[(carouselCount+1)%featureData.length]?.art" *ngIf="isMoving" [style]="tweenMask"/>
-<app-active-index-point [rect]="activeIndexPosition" [items]="featureData" [activeIndex]="carouselCount"></app-active-index-point>
 <app-touchDragBar *ngIf="showTouchBar" [rect]="touchBarRect" (itemClick)="bennerClick()" (dragState)="dargStatusChange($event)"></app-touchDragBar>
+<app-active-index-point [rect]="activeIndexPosition" [items]="featureData" [activeIndex]="carouselCount" [canClick]="true"></app-active-index-point>
