--- a/src/pages/lobby/product-item/product-item.component.html
+++ b/src/pages/lobby/product-item/product-item.component.html
@@ -4,12 +4,12 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-04 11:40:44
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2022-01-07 11:28:06
+ * @LastEditTime: 2022-01-17 10:04:25
 -->
 <div [ngStyle]="styles.position" [attr.itemdata]="index" (click)="onItemClick($event)">
   <app-image [imgData]="productBg"></app-image>
   <div [ngStyle]="styles.productPicPosition">
-    <img src={{itemData.img}} width="320px" height="308px" [ngStyle]="styles.productImageStyle" (load)="onImgload()">
+    <img [src]="itemData.img | gifToPng" width="320px" height="308px" [ngStyle]="styles.productImageStyle" (load)="onImgload()">
   </div>
   <app-image [imgData]="vipFlag" *ngIf="isVip"></app-image>
   <app-image [imgData]="coinIcon" *ngIf="!isFree"></app-image>
