--- a/src/pages/my/user-center/user-center.component.html
+++ b/src/pages/my/user-center/user-center.component.html
@@ -10,13 +10,13 @@
   <div [ngStyle]="styles.facebookHead">
     <img src="{{headIcon}}" width="140" height="140">
   </div>
-  <app-image [imgData]="headMask"></app-image>
-  <app-image [imgData]="vipIcon" *ngIf="isVip"></app-image>
-  <app-image [imgData]="coinBg"></app-image>
-  <app-image [imgData]="ticketBg"></app-image>
-  <app-image [imgData]="coinIcon"></app-image>
-  <app-image [imgData]="ticketIcon"></app-image>
-  <app-image-button [imgData]="plusBtn" (itemClick)="gotoBank()"></app-image-button>
+  <app-image [imgData]="ui.headMask"></app-image>
+  <app-image [imgData]="ui.vipIcon" *ngIf="isVip"></app-image>
+  <app-image [imgData]="ui.coinBg"></app-image>
+  <app-image [imgData]="ui.ticketBg"></app-image>
+  <app-image [imgData]="ui.coinIcon"></app-image>
+  <app-image [imgData]="ui.ticketIcon"></app-image>
+  <app-image-button [imgData]="ui.plusBtn" (itemClick)="gotoBank()"></app-image-button>
   <app-text-field [positionRect]="coinsRect" [text]="''+coinNumber" [color]="textColor" [size]="textSize" [bold]="true"></app-text-field>
   <app-text-field [positionRect]="scoreRect" [text]="''+scoreNumber" [color]="textColor" [size]="textSize" [bold]="true"></app-text-field>
   <app-popup-text-field [textData]="userNameText" [text]="userNameString"></app-popup-text-field>
