--- a/src/pages/prize/prize.component.html
+++ b/src/pages/prize/prize.component.html
@@ -14,20 +14,20 @@
     </div>
     <div *ngIf="!prizeList.length">
       <div class="noOrder" [ngStyle]="styles.noOrder">No Prize Won Yet</div>
-      <app-image [imgData]="shocked"></app-image>
+      <app-image [imgData]="ui.shocked"></app-image>
     </div>
-    <app-image [imgData]="allPrizeIcon"></app-image>
-    <app-image-button [imgData]="packageBtn" (itemClick)="switchPannel( false )"></app-image-button>
+    <app-image [imgData]="ui.allPrizeIcon"></app-image>
+    <app-image-button [imgData]="ui.packageBtn" (itemClick)="switchPannel( false )"></app-image-button>
   </div>
   <div *ngIf="!showPrize">
-    <app-image-button [imgData]="allPrizeBtn" (itemClick)="switchPannel( true )"></app-image-button>
-    <app-image [imgData]="packageIcon"></app-image>
-    <app-image-button [imgData]="addressBtn" (itemClick)="editAddress()"></app-image-button>
+    <app-image-button [imgData]="ui.allPrizeBtn" (itemClick)="switchPannel( true )"></app-image-button>
+    <app-image [imgData]="ui.packageIcon"></app-image>
+    <app-image-button [imgData]="ui.addressBtn" (itemClick)="editAddress()"></app-image-button>
     <div [ngStyle]="styles.addressDiv">
       <div class="firstLine"><span class="spanBold">{{itemData.first_name}}&nbsp;&nbsp;{{itemData.last_name}}</span><span class="spanGray">{{itemData.tel}}</span></div>
       <div class="allElse" [ngStyle]="styles.allElse">{{mainString}}</div>
-      <app-image [imgData]="arrowIcon"></app-image>
+      <app-image [imgData]="ui.arrowIcon"></app-image>
     </div>
-    <app-image-button [imgData]="addBtn" (itemClick)="addOrder()"></app-image-button>
+    <app-image-button [imgData]="ui.addBtn" (itemClick)="addOrder()"></app-image-button>
   </div>
 </div>
